fix(flags): rollback exechash cli api
exechash can be set again as 'option:exec-hash' which will set it now as
'dev-inode' as default.

--- a/docs/man/output.1
+++ b/docs/man/output.1
@@ -14,7 +14,7 @@
 . ftr VB CB
 . ftr VBI CBI
 .\}
-.TH "TRACEE-OUTPUT" "1" "2023/10" "" "Tracee Output Flag Manual"
+.TH "TRACEE-OUTPUT" "1" "2024/02" "" "Tracee Output Flag Manual"
 .hy
 .SS NAME
 .PP
@@ -24,7 +24,7 @@ tracee \f[B]--output\f[R] - Control how and where output is printed
 tracee \f[B]--output\f[R] <format[:file,\&...]> |
 gotemplate=template[:file,\&...]
 | forward:url | webhook:url |
-option:{stack-addresses,exec-env,relative-time,exec-hash={inode,dev-inode,digest-inode},parse-arguments,parse-arguments-fds,sort-events}
+option:{stack-addresses,exec-env,relative-time,exec-hash[={inode,dev-inode,digest-inode}],parse-arguments,parse-arguments-fds,sort-events}
 \&...
 .SS DESCRIPTION
 .PP
@@ -95,15 +95,17 @@ Affected events: \f[I]sched_process_exec\f[R],
 .IP \[bu] 2
 \f[B]inode\f[R] option recalculates the file hash if the inode\[cq]s
 creation time (ctime) differs, which can occur in different namespaces
-even for identical inodes. This option is performant, but not recommended
-and should only be used if container enrichment can't be enabled for digest-inode,
-and if performance is preffered over correctness.
+even for identical inode.
+This option is performant, but not recommended and should only be used
+if container enrichment can\[cq]t be enabled for digest-inode, and if
+performance is preferred over correctness.
 .IP \[bu] 2
-\f[B]dev-inode\f[R] option generally offers better performance compared
-to the \f[B]inode\f[R] option, as it bypasses the need for
+\f[B]dev-inode\f[R] (default) option generally offers better performance
+compared to the \f[B]inode\f[R] option, as it bypasses the need for
 recalculation by associating the creation time (ctime) with the device
-(dev) and inode pair. It's recommended if correctness is preffered over
-performance without container enrichment enabled.
+(dev) and inode pair.
+It\[cq]s recommended if correctness is preferred over performance
+without container enrichment.
 .IP \[bu] 2
 \f[B]digest-inode\f[R]\[rq] option is the most efficient, as it keys the
 hash to a pair consisting of the container image digest and inode.
